<resources>
    <string name="app_name">AgendaRockPet</string>
    <string name="fab_add_cliente">Adiciona Novo Cliente</string>
    <string name="nome_cliente">Nome do Tutor</string>
    <string name="nome_animal">Nome do Animal</string>
    <string name="telefone_cliente">Telefone</string>
    <string name="email_cliente">e-mail</string>
    <string name="observacao_cliente">Observação (Opcional)</string>
    <string name="botao_salvar">Salvar"</string>
    <string name="data">Data (dd/mm/aaaa)"</string>
    <string name="hora">Hora (hh:mm)"</string>
    <string name="senha">Senha"</string>
    <string name="entrar">Entrar"</string>
    <string name="redefinir_senha">Esqueci a Senha"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_data_fragment">Hello data fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>