<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.Login.LoginActivity"
    android:background="@color/lightBlue">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/ic_pet_foreground"
        app:layout_constraintBottom_toBottomOf="@id/email_login"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/email_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_cliente"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <EditText
        android:id="@+id/senha_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/senha"
        android:layout_margin="16dp"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_login" />

    <TextView
        android:id="@+id/cadastre_se"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cadastre-se"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/senha_login"
        app:layout_constraintEnd_toEndOf="@id/senha_login"
        android:layout_marginEnd="30dp"/>

    <TextView
        android:id="@+id/esqueci_a_senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/redefinir_senha"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/senha_login"
        android:layout_marginStart="30dp"/>

    <Button
        android:id="@+id/botao_entrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entrar"
        android:layout_margin="16dp"
        android:textSize="18sp"
        android:padding="10dp"
        android:background="@drawable/shape_botao"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/cadastre_se"/>


</androidx.constraintlayout.widget.ConstraintLayout>