<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cinza_claro"
        tools:context=".ui.activity.FormularioClienteActivity">

        <ImageView
            android:id="@+id/imagem_vazia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:scaleType="center"
            android:background="@color/white"
            android:src="@drawable/imagem_sem_fundo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nome_cliente_imputLayout_formulario"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/white"
            android:fontFamily="@font/roboto_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imagem_vazia">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nome_cliente_formulario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome_cliente"
                android:inputType="text"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nome_animal_imputLayout_formulario"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/white"
            android:fontFamily="@font/roboto_medium"
            app:layout_constraintEnd_toEndOf="@id/nome_cliente_imputLayout_formulario"
            app:layout_constraintStart_toStartOf="@id/nome_cliente_imputLayout_formulario"
            app:layout_constraintTop_toBottomOf="@id/nome_cliente_imputLayout_formulario">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nome_animal_formulario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome_animal"
                android:inputType="text"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/telefone_cliente_imputLayout_formulario"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/white"
            android:fontFamily="@font/roboto_medium"
            app:layout_constraintEnd_toEndOf="@id/nome_cliente_imputLayout_formulario"
            app:layout_constraintStart_toStartOf="@id/nome_cliente_imputLayout_formulario"
            app:layout_constraintTop_toBottomOf="@id/nome_animal_imputLayout_formulario">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/telefone_cliente_formulario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telefone_cliente"
                android:inputType="number"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_cliente_imputLayout_formulario"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/white"
            android:fontFamily="@font/roboto_medium"
            app:layout_constraintEnd_toEndOf="@id/nome_cliente_imputLayout_formulario"
            app:layout_constraintStart_toStartOf="@id/nome_cliente_imputLayout_formulario"
            app:layout_constraintTop_toBottomOf="@id/telefone_cliente_imputLayout_formulario">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_cliente_formulario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_cliente"
                android:inputType="text"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/observacao_cliente_imputLayout_formulario"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/white"
            android:fontFamily="@font/roboto_medium"
            app:layout_constraintEnd_toEndOf="@id/nome_cliente_imputLayout_formulario"
            app:layout_constraintStart_toStartOf="@id/nome_cliente_imputLayout_formulario"
            app:layout_constraintTop_toBottomOf="@id/email_cliente_imputLayout_formulario">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/observacao_cliente_formulario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/observacao_cliente"
                android:inputType="text"
                android:textSize="18sp"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/botao_salvar_formulario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/shape_botao"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/botao_salvar"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/nome_cliente_imputLayout_formulario"
            app:layout_constraintStart_toStartOf="@id/nome_cliente_imputLayout_formulario"
            app:layout_constraintTop_toBottomOf="@id/observacao_cliente_imputLayout_formulario"
            app:layout_constraintVertical_bias="1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
